test/should_fail/logic_op_2.erl
-module(logic_op_2).

-spec fail(boolean()) -> tuple().
fail(X) -> X andalso {}.
